--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -56,6 +56,24 @@
 		box-sizing: border-box;
 	}
 
+/* Email Form */
+
+.sender {
+	background:	white!important;
+	margin: 20px auto 20px auto;
+	width: 70%!important;
+}
+
+.message {
+	background: white!important;
+	width: 70%;
+	margin: 10px auto 20px auto;
+}
+
+.submit {
+
+}
+
 /* Containers */
 
 	.container {
